tests/intend_failure/greater_than_one_member_variant.rs
use enum_variant_macros::*;
#[derive(FromVariants)]
enum Variants {
	Int(i32),
	Float(f32),
	Point(i32, i32),
}
fn main() {
}
